--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -2,10 +2,10 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Your Brand"
+brand: "Kong"
 
 # used for seo meta post author (if it's not defined in post)
-name: "Your Name"
+name: "공지혁"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
@@ -29,7 +29,7 @@ creative_commons:
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
+  - github: "Kongji82"
   #- email: ""
   #- linkedin: ""
   #- twitter: ""
