아이콘 추가

--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -2,7 +2,7 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Kong"
+brand: "공지혁"
 
 # used for seo meta post author (if it's not defined in post)
 name: "공지혁"
